# pandoc-filter-graphviz

./: .gitignore  GititGraphviz.hs  GititPluginGraphviz.hs  GraphvizBlock.hs  LICENSE  Main.hs  README.md  example.md  pandoc-filter-graphviz.cabal
